--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "husky": "^8.0.3",
     "jest": "^29.2.0",
     "lint-staged": "^13.2.2",
+    "sass": "^1.62.1",
     "vite": "^3.1.0"
   },
   "lint-staged": {
