adding script to sass

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "sass": "sass src/sass:public/css"
   },
   "devDependencies": {
     "eslint": "^8.41.0",
