--- a/package.json
+++ b/package.json
@@ -8,18 +8,30 @@
     "build": "vite build",
     "preview": "vite preview",
     "prepare": "husky install",
-    "sass": "sass src/sass:public/css"
+    "sass": "sass src/sass:public/css",
+    "lint": "eslint src/**/*.js",
+    "lint-fix": "eslint src/**/*.js --cache --fix"
   },
   "devDependencies": {
     "eslint": "^8.41.0",
     "husky": "^8.0.3",
     "jest": "^29.2.0",
     "lint-staged": "^13.2.2",
+    "prettier": "^2.8.8",
     "sass": "^1.62.1",
     "vite": "^3.1.0"
   },
   "lint-staged": {
-    "*.js": "eslint --cache --fix"
+    "*.js": [
+      "prettier --write",
+      "eslint --cache --fix"
+    ],
+    "*.html": [
+      "prettier --write"
+    ],
+    "*.scss": [
+      "prettier --write"
+    ]
   },
   "dependencies": {
     "bootstrap": "^5.2.3"
