--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   },
   "devDependencies": {
     "eslint": "^8.41.0",
+    "eslint-config-prettier": "8.8.0",
     "husky": "^8.0.3",
     "jest": "^29.2.0",
     "lint-staged": "^13.2.2",
-    "prettier": "^2.8.8",
+    "prettier": "2.8.8",
     "sass": "^1.62.1",
     "vite": "^3.1.0"
   },
