--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   },
   "lint-staged": {
     "*.js": [
-      "prettier --write",
-      "eslint --cache --fix"
+      "npx prettier --write",
+      "npx eslint --cache --fix"
     ],
     "*.html": [
       "prettier --write"
