--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "eslint": "^8.41.0",
     "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
     "jest": "^29.2.0",
     "lint-staged": "^13.2.2",
