--- a/package.json
+++ b/package.json
@@ -13,15 +13,21 @@
     "lint-fix": "eslint src/**/*.js --cache --fix"
   },
   "devDependencies": {
+    "cypress": "^12.13.0",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-cypress": "^2.13.3",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
     "jest": "^29.2.0",
     "lint-staged": "^13.2.2",
     "prettier": "2.8.8",
     "sass": "^1.62.1",
-    "vite": "^3.1.0"
+    "vite": "^3.1.0",
+    "test": "npm run test-e2e-cli",
+    "test-e2e": "cypress open",
+    "test-e2e-report": "cypress run --reporter mochawesome",
+    "test-e2e-cli": "cypress run"
   },
   "lint-staged": {
     "*.js": [
