--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
     "sass": "sass src/sass:public/css",
     "lint": "eslint src/**/*.js",
     "lint-fix": "eslint src/**/*.js --cache --fix",
-    "test": "npm run test-e2e-cli",
+    "test": "npm run test-unit && npm run test-e2e-cli",
+    "test-unit": "jest",
     "test-e2e": "cypress open",
-    "test-e2e-report": "cypress run --reporter mochawesome",
     "test-e2e-cli": "cypress run"
   },
   "devDependencies": {
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.4",
     "cypress": "^12.13.0",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-cypress": "^2.13.3",
+    "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
     "jest": "^29.2.0",
